[tool.poetry]
name = "ultr-toolbox"
version = "0.1.2"
description = ""
authors = ["Philipp Hager <philipp.konstantin.hager@gmail.com>"]
readme = "README.md"
packages = [{include = "ultr_toolbox"}]

[tool.poetry.dependencies]
python = "^3.8"
jax = "^0.4.1"
flax = "^0.7.1"
optax = "^0.1.7"
pandas = "^2.0.3"
pyarrow = "^12.0.1"
torch = "^2.0.1"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
